2017-10-13  Charlie Zender  <zender@uci.edu>

	* Create nco_msh_mk() to compute overlap mesh

	* Ensure input and output coordinates all in degrees

	* Important milestone: All supplied grid information is read-in, and all mapfile information is written-out

2017-10-12  Charlie Zender  <zender@uci.edu>

	* Read coordinates from source grid in nco_map_mk()

	* Modify in.cdl to include three_dmn_rec_var_pck to test masking weighted averages of packed variables for Antonio Rodrigues

2017-10-11  Charlie Zender  <zender@uci.edu>

	* Correct NC_NOERR checks

	* Read, error-correct, and write src/dst grid rank and dimensions in nco_map_mk()

	* Fix/change --weight et al. to option_type=required_argument in ncwa.c, ncflint.c

2017-10-09  Charlie Zender  <zender@uci.edu>

	* Add nco_map.[ch] to build engines

2017-10-07  Charlie Zender  <zender@uci.edu>

	* Re-arrange/rename weight-application logic to make room for nco_map_mk() stub in nco_map.c

2017-10-01  Charlie Zender  <zender@uci.edu>

	* Add, document, and test -L dfl_lvl option to ncclimo

2017-09-25  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.0-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.0-alpha02 final changes';git push
	git tag -a 4.7.0-alpha02 -m 'ncra/ncrcat negative record hyp fix,';git push --tags

2017-09-21  Charlie Zender  <zender@uci.edu>

	* Fix bug where ncra, ncrcat treated negative record hyperslab indices
	with old (pre-2014) convention, and off-by-one relative to non-record hyperslabs

	* Add var_nm to diagnostic when all put/get functions fail

2017-09-20  Charlie Zender  <zender@uci.edu>

	* Add doc/conda.txt for Conda notes

2017-09-19  Charlie Zender  <zender@uci.edu>

	* Correct --trd and --cdl usage in manual

	* NCO 4.7.0-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.0-alpha01 final changes';git push
	git tag -a 4.7.0-alpha01 -m 'ncclimo fl_fmt,quiet CDF5 sniffing';git push --tags

	* Only print CDF5 sniffing message when large variable found
